tdf#118769 parent of modal dialog not set

Change-Id: Ie3b1a626eb0ca4f39e015a18fede935b36ed194e